--- a/security.html
+++ b/security.html
@@ -75,11 +75,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bai-inc/8cb0cddf-b200-4039-bbb4-cb0b49adb103'>Bai Inc. - Security Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/bai-inc/8cb0cddf-b200-4039-bbb4-cb0b49adb103'>Bai Inc. - Security Analyst</a></h5> 
 <p><span class="badge badge-light">Washington, DC  Washington, DC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Itechstack/743999698526449-centrify-security-architect'>itechstack Centrify Security Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Itechstack/743999698526449-centrify-security-architect'>itechstack Centrify Security Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -119,7 +119,7 @@
 <p><span class="badge badge-light">Toronto, Ontario</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/graphcore/jobs/4499175002'>Job Application for System Software & Security Architect at Graphcore</a></h5> 
+<h5><a href='https://boards.greenhouse.io/graphcore/jobs/4499175002'>Job Application for System Software & Security Architect at Graphcore</a></h5> 
 <p><span class="badge badge-light">Bristol, UK  Cambridge</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -180,7 +180,7 @@ to be ?baked in? to a system architecture, but you actually know how to bake it 
 <p><span class="badge badge-light">Plano, TX Arlington, VA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/prominentedge/16b6fd2c-8960-4f22-b577-ccf83d0c13d6'>Prominent Edge LLC - Senior Security Solutions Engineer  (TS/SCI Required)</a></h5> 
+<h5><a href='https://jobs.lever.co/prominentedge/16b6fd2c-8960-4f22-b577-ccf83d0c13d6'>Prominent Edge LLC - Senior Security Solutions Engineer  (TS/SCI Required)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -220,7 +220,7 @@ to be ?baked in? to a system architecture, but you actually know how to bake it 
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://west4thstrategy.applytojob.com/apply/VD9A4J8CeX/Cloud-Security-Engineer-Architect'>Cloud Security Engineer / Architect - West 4th Strategy - Career Page</a></h5> 
+<h5><a href='http://west4thstrategy.applytojob.com/apply/VD9A4J8CeX/Cloud-Security-Engineer-Architect'>Cloud Security Engineer / Architect - West 4th Strategy - Career Page</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -244,7 +244,7 @@ to be ?baked in? to a system architecture, but you actually know how to bake it 
 <p><span class="badge badge-light">Portland, OR</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://www.theladders.com/job/40967470'>SR. ISeries Security Engineer - Virtual / Travel - Advantage Resourcing | Ladders</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.theladders.com/job/40967470'>SR. ISeries Security Engineer - Virtual / Travel - Advantage Resourcing | Ladders</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -266,7 +266,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vgs/7eed1a68-cf63-4b1a-9bc1-2c20793fd704'>Very Good Security - Junior Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/vgs/7eed1a68-cf63-4b1a-9bc1-2c20793fd704'>Very Good Security - Junior Software Engineer</a></h5> 
 <p><span class="badge badge-light">Lviv, Ukraine</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -310,7 +310,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Toronto, Ontario</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oZ9cafwe&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nXFRmMw6'>Imperva Careers - Cyber Security Engineer - Managed Services</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oZ9cafwe&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nXFRmMw6'>Imperva Careers - Cyber Security Engineer - Managed Services</a></h5> 
 <p><span class="badge badge-light">Singapore, Singapore</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -338,11 +338,11 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/juvo/jobs/1933379'>Job Application for Cloud Security Architect  at Juvo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/juvo/jobs/1933379'>Job Application for Cloud Security Architect  at Juvo</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=orL0afw6&__jvst=Tenable+Employee&__jvsd=s3pCGgwv&__jvsc=Twitter&bid=nSKBmMwQ'>Tenable Careers - Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=orL0afw6&__jvst=Tenable+Employee&__jvsd=s3pCGgwv&__jvsc=Twitter&bid=nSKBmMwQ'>Tenable Careers - Security Engineer</a></h5> 
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -430,13 +430,13 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">France  France  Paris, France</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://careercyresconsulting.recruitee.com/o/systems-security-engineer-wmd'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careercyresconsulting.recruitee.com/o/systems-security-engineer-wmd'>
       Systems Security Engineer (w/m/d) - CYRES Consulting Services GmbH
     </a></h5> 
 <p><span class="badge badge-light">Riga, Latvia</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://careercyresconsulting.recruitee.com/o/automotive-security-software-engineer-wmd'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careercyresconsulting.recruitee.com/o/automotive-security-software-engineer-wmd'>
       Automotive Security Software Engineer (w/m/d) - CYRES Consulting Services GmbH
     </a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
